syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "ComponentActivationProto";


message ComponentActivationMsg {
  enum EnumType {
    ON = 0;
    NOT_RDY = 1;
    STND_BY = 2;
    OFF = 3;
    SHTDN = 4;
    FAIL = 5;
  }
  EnumType enum_value = 1;
}
