syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "DerivationMethodType";


message DerivationMethod {
  enum DerivationMethodEnum {
    AUTO = 0;
    MAN = 1;
  }
}
